--- a/src/App.css
+++ b/src/App.css
@@ -2,18 +2,13 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -22,11 +17,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
+} */
 
 @keyframes App-logo-spin {
   from {
@@ -35,4 +26,37 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+a {
+  color: #FFF;
+  text-decoration: none;
+}
+a:hover {
+   color: #00F
+}
+
+.link-list {
+  list-style: none;
+  display: flex;
+  text-align: right;
+  justify-content: space-between;
+}
+
+.header {
+  background-color: rgb(37, 150, 190);
+  padding: 1%;
+  padding-bottom: 6%;
+  color: white;
+  margin: 0 auto;
+}
+
+.header h1 {
+margin-top: 10%;
+text-align: center;
+font-weight: 400;
+}
+
+.construction {
+  max-width: 100%;
 }
