--- a/src/App.css
+++ b/src/App.css
@@ -1,62 +1,27 @@
-.App {
+/* .App {
   text-align: center;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-/* .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 } */
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-a {
-  color: #FFF;
-  text-decoration: none;
-}
-a:hover {
-   color: #00F
-}
-
-.link-list {
-  list-style: none;
-  display: flex;
-  text-align: right;
-  justify-content: space-between;
-}
-
-.header {
-  background-color: rgb(37, 150, 190);
-  padding: 1%;
-  padding-bottom: 6%;
-  color: white;
-  margin: 0 auto;
-}
-
-.header h1 {
-margin-top: 10%;
-text-align: center;
-font-weight: 400;
-}
 
 .construction {
   max-width: 100%;
+  padding-top: 3%;
+}
+
+.face {
+  max-width: 30%;
+  border-radius: 50%;
+  margin-right: 5%;
+}
+
+.about-me {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 5%;
+  margin-left: 10%;
+  margin-right: 10%;
+  text-align: left;
+}
+
+a:hover {
+  color: #FFC107 !important
 }
