--- a/src/App.css
+++ b/src/App.css
@@ -9,23 +9,33 @@
 
 .face {
   max-width: 30%;
-  border-radius: 50%;
+  border-radius: 5%;
   margin-right: 5%;
+  box-shadow: 0px 4px 20px 0px rgba(0,0,0,0.2);
+
 }
 
 .about-me {
   display: flex;
-  /* justify-content: space-between; */
   margin-top: 5%;
-  margin-left: 10%;
-  margin-right: 10%;
-  text-align: left;
+  margin-left: 15%;
+  margin-right: 15%;
 }
 
 .text {
-  margin-top: 3%;
+  margin-top: 1%;
 }
 
 a:hover {
   color: #FFC107 !important
+}
+
+.languages {
+  display: flex;
+  justify-content: space-evenly;
+  margin-right: 60%;
+}
+
+.btn {
+  background-color: #f1f1f1 !important;
 }
