--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,12 @@
-/* .App {
-  text-align: center;
-} */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-.construction {
-  max-width: 100%;
-  padding-top: 3%;
-}
 
 .face {
-  max-width: 30%;
+  max-width: 25%;
   border-radius: 5%;
-  margin-right: 5%;
-  box-shadow: 0px 4px 20px 0px rgba(0,0,0,0.2);
-
+  margin-right: 3%;
 }
 
 .about-me {
